--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,6 +2,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
+    font-display: swap;
     src: local(''),
         url('/assets/fonts/roboto-v20-latin-300.woff2') format('woff2'),
         url('/assets/fonts/roboto-v20-latin-300.woff') format('woff');
@@ -11,6 +12,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: local(''),
         url('/assets/fonts/roboto-v20-latin-regular.woff2') format('woff2'),
         url('/assets/fonts/roboto-v20-latin-regular.woff') format('woff');
@@ -156,6 +158,8 @@ color: var(--color-accent);
     border-radius: 50%;
     align-self: flex-start;
     margin: 0 auto 1em auto;
+    height: 320px;
+    weight: 320px;
 }
 
 .profile__info {
