--- a/src/index.njk
+++ b/src/index.njk
@@ -4,6 +4,7 @@ desc: "Welcome to my personal space on the world wide web. I enjoy hiking, bikin
     I work with Power Platform, Powershell, Sharepoint, and I'm learning web development."
 layout: base.njk
 changeFreq: "weekly"
+isHomePage: "Yes"
 ---
 <section class="profile">
     <img class="profile__image" src="/assets/img/profile-photo.jpg" height="320px" weight="320px" alt="Mike holding a mug of coffee. Black and white.">
