--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -26,10 +26,17 @@
     <!-- Open graph -->
     <meta property="og:title" content="{{ title }}">
     <meta property="og:description" content="{{ desc or title }}">
-    <meta property="og:type" content="article">
-    <meta property="og:image" content="{{ socialImageUrl }}">
+      {% if isHomePage %}
+        {% set ogContentType = "website" %}
+    {% else %}
+        {% set ogContentType = "article" %}
+    {% endif %}
+    <meta property="og:type" content="{{ ogContentType }}">
+    <meta name="image" property="og:image" content="{{ socialImageUrl }}">
     <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="675">
+    <meta property="og:image:height" content="630">
+    <meta property="article:author" name="author" content="{{ metadata.author.name}}">
+    <meta property="article:published_time" content="{{ published }}">
     <!-- Twitter -->
     <meta name="twitter:title" content="{{ title }}">
     <meta name="twitter:card" content="summary_large_image">
