--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 title: Michael Harley, chief goblin herder
-desc: "Welcome to my personal space on the world wide web. I enjoy hiking, biking, foosball, and reading. 
+desc: "I enjoy hiking, biking, foosball, and reading. 
     I work with Power Platform, Powershell, Sharepoint, and I'm learning web development."
 layout: base.njk
 changeFreq: "weekly"
