--- a/src/about/index.njk
+++ b/src/about/index.njk
@@ -2,15 +2,14 @@
 title: About Michael Harley
 layout: base.njk
 ---
-<h1>About me</h1>
-<p>Hi there! I'm Mike and welcome to my personal space on the world wide web. 👋🏻</p>
-<p>My day job is working as in the Microsoft stack, Power Platform, PowerShell and SharePoint to solve business problems.</p>
-<p>Otherwise, I enjoy hiking, riding bicycles, playing foosball, reading books and keeping up with my dang cats. 🥾 🚵🏻‍♂️ ⚽️ 📚 🐈</p>
-<h2>About the site</h2>
-<p>In case you were wondering, this site is:</p>
-<ul>
-    <li>Designed and coded on a Mac in Nashville, TN</li>
-    <li>Coded with Visual Studio Code</li>
-    <li>Built on <a href="https://www.11ty.dev/">11ty</a>, a static site generator</li>
-    <li>Hosted on <a href="https://pages.github.com/">GitHub Pages</a></li>
-</ul>
+<section class="about" >
+    <h1>about me</h1>
+    <figure>
+        {% myImage "./src/about/about-image.jpg", "Mike standing in hiking clothing, on a bluff with trekking poles. Foggy behind." %}
+        <figcaption>Hiking in Savage Gulf</figcaption>
+    </figure>
+    <h2>Hi there, I'm Mike  👋🏻</h2>
+    <p>I live in Nashville, TN with some <a href="/posts/please-meet-my-cats/">dang cats</a>.</p>
+    <p>I enjoy hiking, riding bicycles, playing foosball, reading books and tending to this website, among other things. 🥾 🚵🏻‍♂️ ⚽️ 📚 🐈</p>
+    <p>My day job is working in the Microsoft, Office 365 stack, solving business problems with Power Platform, PowerShell and SharePoint.</p>
+</section>
