--- a/src/contact/index.njk
+++ b/src/contact/index.njk
@@ -2,8 +2,8 @@
 title: Contact Michael Harley
 layout: base.njk
 ---
-<h1>Contact</h1>
-<p>Let's connect! The two best methods are probably <a href="https://twitter.com/obsolete29">Twitter</a> or <a href="mailto:mike@obsolete29.com">email</a></p>
+<h1>let's connect</h1>
+<p>The two best methods are probably <a href="https://twitter.com/obsolete29">Twitter</a> or <a href="mailto:mike@obsolete29.com">email</a></p>
 <h2>Around the web</h2>
 <ul>
     <li><a href="https://www.goodreads.com/obsolete29"></a>Goodreads</li>
