Refactoring front page

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -53,9 +53,7 @@
             <nav class="site-top-nav">
                 <a class="site-top-nav__link site-top-nav__link--home"href="/"><span class="site-top-nav__home-character">></span>obsolete29.com</a>
                 <section class="site-top-nav__links">
-                    <a href="/posts/" class="site-top-nav__link">posts</a>
-                    <a href="/contact/" class="site-top-nav__link">contact</a>
-                    <a href="/about/" class="site-top-nav__link">about</a>
+                    <a href="/posts/" class="site-top-nav__link">writing</a>
                 </section>
             </nav>
         </div>
