--- a/src/posts.njk
+++ b/src/posts.njk
@@ -5,7 +5,7 @@ layout: base.njk
 permalink: /posts/
 changeFreq: "weekly"
 ---
-<h1>posts</h1>
+<h1>writing</h1>
 <section class="posts">
     {% for post in collections.posts | reverse %}
     <article class="posts__post-summary">
