Refactoring mobile version

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -13,8 +13,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/img/favicon/site.webmanifest">
-    <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
-    <link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+    <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
+    <!-- RSS feeds -->
+    <link rel="alternate" href="{{ metadata.feed.feedUrl}}" type="application/atom+xml" title="{{ metadata.title }}">
     <!-- SEO -->
     <title>{{ title }}</title>
     {% if socialCardUrl %}
@@ -52,6 +53,7 @@
         <div class="container">
             <nav class="site-top-nav">
                 <a class="site-top-nav__link site-top-nav__link--home"href="/"><span class="site-top-nav__home-character">></span>obsolete29.com</a>
+                <a class="site-top-nav__link" href="/"><img class="site-top-nav__link-img" src="/assets/img/profile-photo-small.jpg" alt=""></a>
                 <section class="site-top-nav__links">
                     <a href="/posts/" class="site-top-nav__link">writing</a>
                 </section>
