--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -134,13 +134,28 @@ h1 {
     margin-right: 1em;
 }
 
+.site-top-nav__link-img {
+    display: none;
+}
+
 @media (max-width: 501px) {
+
     .site-top-nav__links {
-        margin-top: 1em;
+        margin-top: 0;
+        align-self: center;
     }
 
     .site-top-nav__link:not(:last-child) {
         margin-right: 2em;
+    }
+
+    .site-top-nav__link--home {
+        display: none;
+    }
+
+    .site-top-nav__link-img {
+        display: block;
+        border-radius: 50%;
     }
 }
   
@@ -176,6 +191,13 @@ color: var(--color-accent);
     margin: 0 auto 1em auto;
     height: 320px;
     width: 320px;
+}
+
+
+@media (max-width: 501px) {
+    .profile__image {
+        display: none;
+    }
 }
 
 .profile__info {
@@ -335,6 +357,11 @@ color: var(--color-accent);
 
 .post__discussion-icon {
     width: 22px;
+}
+
+.post__50-percent-container {
+    width: 50%;
+    display: flex;
 }
 
 /* Footer */
