--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/normalize.css">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/prism.css">
     <link rel="preload" href="/assets/fonts/roboto-v20-latin-300.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/roboto-v20-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <!-- favicons -->
@@ -44,7 +44,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@obsolete29">
     <meta name="twitter:description" content="{{ desc or title }}">
-    <meta name="twitter:image" content="{{ socialImageUrl }}{{ metadata.twitterSocialImageName }}">
+    <meta name="twitter:image" content="{{ socialImageUrl }}{{ metadata.ogSocialImageName }}">
     <meta name="twitter:creator" content="@obsolet29">
 </head>
 <body>
