--- a/src/index.njk
+++ b/src/index.njk
@@ -18,16 +18,14 @@ isHomePage: "Yes"
         </p>
     </section>
 </section>
-<section class="posts">
-    <h2 class="posts__header">Some personal favs</h2>
-    {% for post in collections.posts | reverse %}
-        {% if post.data.isFeatured %}    
-            <article class="posts__post-summary">
-                <time class="posts__post-summary-date">{{ post.data.published | dateformat }}</time>
-                <a class="posts__post-summary-title" href={{ post.url }}>{{ post.data.title }}</a>
-            </article>
-        {% endif %}
-    {% endfor %}
+<section class="featured-posts">
+    <h2 class="featured-posts__title">Some personal favs</h2>
+    <p>Here are some of my personal favorite articles and pages that I'm proud of.</p>
+    <ul>
+        <li class="featured-posts__post"> 😺 <a href="/posts/please-meet-my-cats/">Please meet my cats</a></li>
+        <li class="featured-posts__post"> 💻  <a href="/posts/building-my-personal-site-with-eleventy/">Building my personal site with Eleventy</a></li>
+        <li class="featured-posts__post"><a href="/posts/lessons-learned-from-bridgestone/">Lessons learned from my time at Bridgestone</a></li>
+    </ul>
     <a class="more-writing" href="/posts/">
         <span class="more-writing__text">more writing</span> 
         <svg class="more-writing__symbol" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
