Adding fathom tracking

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -46,6 +46,9 @@
     <meta name="twitter:description" content="{{ desc or title }}">
     <meta name="twitter:image" content="{{ socialImageUrl }}{{ metadata.ogSocialImageName }}">
     <meta name="twitter:creator" content="@obsolet29">
+    <!-- Fathom - beautiful, simple website analytics -->
+    <script src="https://cdn.usefathom.com/script.js" data-site="PAQJTFMK" defer></script>
+    <!-- / Fathom -->
 </head>
 <body>
     <div class="page-stripe"></div>
