2020 in review blog post

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -47,7 +47,7 @@
     <meta name="twitter:image" content="{{ socialImageUrl }}{{ metadata.ogSocialImageName }}">
     <meta name="twitter:creator" content="@obsolet29">
     <!-- Fathom - beautiful, simple website analytics -->
-    <script src="https://cdn.usefathom.com/script.js" data-site="PAQJTFMK" defer></script>
+    <script src="https://beetle.obsolete29.com/script.js" data-site="PAQJTFMK" defer></script>
     <!-- / Fathom -->
 </head>
 <body>
