Migrate some posts

--- a/src/index.njk
+++ b/src/index.njk
@@ -22,6 +22,7 @@ isHomePage: "Yes"
     <h2 class="featured-posts__title">Some personal favs</h2>
     <p>Here are some of my personal favorite articles and pages that I'm proud of.</p>
     <ul>
+        <li class="featured-posts__post"> 🌟 <a href="/posts/2020-in-review/">My 2020 in review</a></li>
         <li class="featured-posts__post"> 😺 <a href="/posts/please-meet-my-cats/">Please meet my cats</a></li>
         <li class="featured-posts__post"> 💻  <a href="/posts/building-my-personal-site-with-eleventy/">Building my personal site with Eleventy</a></li>
         <li class="featured-posts__post"><a href="/posts/lessons-learned-from-bridgestone/">Lessons learned from my time at Bridgestone</a></li>
