--- a/src/index.njk
+++ b/src/index.njk
@@ -22,19 +22,19 @@ isHomePage: "Yes"
     <h2 class="featured-posts__title">Some personal favs</h2>
     <p>Here are some of my personal favorite articles and pages that I'm proud of.</p>
     <ul>
-        <li class="featured-posts__post"> 🌟 <a href="/posts/2020-in-review/">My 2020 in review</a></li>
-        <li class="featured-posts__post"> 😺 <a href="/posts/please-meet-my-cats/">Please meet my cats</a></li>
-        <li class="featured-posts__post"> 💻  <a href="/posts/building-my-personal-site-with-eleventy/">Building my personal site with Eleventy</a></li>
-        <li class="featured-posts__post"><a href="/posts/lessons-learned-from-bridgestone/">Lessons learned from my time at Bridgestone</a></li>
+        <li>🌟 <a class="featured-posts__post" href="/posts/2020-in-review/">My 2020 in review</a></li>
+        <li>😺 <a class="featured-posts__post" href="/posts/please-meet-my-cats/">Please meet my cats</a></li>
+        <li>💻  <a class="featured-posts__post" href="/posts/building-my-personal-site-with-eleventy/">Building my personal site with Eleventy</a></li>
+        <li><a class="featured-posts__post" href="/posts/lessons-learned-from-bridgestone/">Lessons learned from my time at Bridgestone</a></li>
     </ul>
-    <a class="more-writing" href="/posts/">
-        <span class="more-writing__text">more writing</span> 
-        <svg class="more-writing__symbol" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-            <g fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-                <path d="m29.08 16h-26"/>
-                <path d="m29.08 16-4 5"/>
-                <path d="m29.08 16-4-5"/>
-            </g>
-        </svg>
-    </a>
 </section>
+<a class="more-writing" href="/posts/">
+    <span class="more-writing__text">more writing</span> 
+    <svg class="more-writing__symbol" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+        <g fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+            <path d="m29.08 16h-26"/>
+            <path d="m29.08 16-4 5"/>
+            <path d="m29.08 16-4-5"/>
+        </g>
+    </svg>
+</a>
