Updated profile-img to use eleventy-img

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ changeFreq: "weekly"
 isHomePage: "Yes"
 ---
 <section class="profile">
-    <img class="profile__image" src="/assets/img/profile-photo.jpg" height="320px" weight="320px" alt="Mike holding a mug of coffee. Black and white.">
+    {% image "./src/images/profile-photo.jpg", "Mike holding a mug of coffee. Black and white." %}
     <section class="profile__info">
         <h1 class="profile__title">Michael Harley</h1>
         <h2 class="profile__sub-title">chief goblin herder</h2>
