update callout style

--- a/src/index.njk
+++ b/src/index.njk
@@ -25,6 +25,7 @@ isHomePage: "Yes"
         <li>🌟 <a class="featured-posts__post" href="/posts/2020-in-review/">My 2020 in review</a></li>
         <li>😺 <a class="featured-posts__post" href="/posts/please-meet-my-cats/">Please meet my cats</a></li>
         <li>💻  <a class="featured-posts__post" href="/posts/building-my-personal-site-with-eleventy/">Building my personal site with Eleventy</a></li>
+        <li>🚴🏻 <a class="featured-posts__post" href="/posts/cycling-the-natchez-trace/">Cycling the Natchez Trace (2014)</a></li>
         <li><a class="featured-posts__post" href="/posts/lessons-learned-from-bridgestone/">Lessons learned from my time at Bridgestone</a></li>
     </ul>
 </section>
