--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -397,6 +397,8 @@ color: var(--color-accent);
   background: var(--color-background);
   margin: 1.5em 0;
   padding: 0.5em 20px;
+  border-top: 3px solid;
+  border-image: linear-gradient(to right,#f1f5f7,#d80b77) 30 0 0 0;
 }
 
 /* Footer */
