Add email signup form

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -5,6 +5,11 @@ layout: base.njk
 <h1 class="post__header">{{ title }}</h1>
 <section class="post__body">
    {{ content | safe }}
+   <aside class="post__callout">
+    If you enjoyed this post and would like to follow me, you can point your favorite RSS reader 
+    (I use <a href="https://feedbin.com/">Feedbin</a>) at my <a href="/feed/feed.xml">RSS feed</a> 
+    or you can <a href="/signup/">sign up</a> to recieve notifications about new posts via email.
+  </aside>
 </section>
 <footer class="post__footer">
     <p class="post__metadata">
