--- a/src/assets/css/signup.css
+++ b/src/assets/css/signup.css
@@ -3,7 +3,7 @@
   display:block; 
   position:relative; 
   text-align:left; 
-  padding:10px 0 10px 3%
+  padding:10px 0
 }
 
 #mc_embed_signup h2 {
