--- a/src/signup/index.njk
+++ b/src/signup/index.njk
@@ -4,16 +4,13 @@ layout: base.njk
 pageCSS: src/assets/css/signup.css
 ---
 <h1>get email updates</h1>
-Please use the form below to receive updates about new posts, directly to your email inbox.
+Sign up to receive updates of new posts via email. I use Mailchimp to manage this for me
+but I won't do any sort of marketing nor will I ever share, sell or trade your email address
+with anyone.<hr>
 <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
+<link href="/assets/css/signup.css" rel="stylesheet" type="text/css">
 <div id="mc_embed_signup">
-<form action="https://obsolete29.us3.list-manage.com/subscribe/post?u=0bbfc47f83debb6b0c9b93930&amp;id=63b8376fe8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="https://obsolete29.us3.list-manage.com/subscribe/post?u=0bbfc47f83debb6b0c9b93930&amp;id=63b8376fe8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
     <div id="mc_embed_signup_scroll">
 	<label for="mce-EMAIL">Subscribe</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
