--- a/src/index.njk
+++ b/src/index.njk
@@ -5,6 +5,7 @@ desc: "I enjoy hiking, biking, foosball, and reading.
 layout: base.njk
 changeFreq: "weekly"
 isHomePage: "Yes"
+socialCardUrl: "/assets/img/og-social-cover.jpg"
 ---
 <section class="profile">
     {% image "./src/images/profile-photo.jpg", "Mike holding a mug of coffee. Black and white.", "profile__image" %}
