Add review of the wire

--- a/src/posts.njk
+++ b/src/posts.njk
@@ -4,6 +4,7 @@ desc: Posts by Michael Harley
 layout: base.njk
 permalink: /posts/
 changeFreq: "weekly"
+socialCardUrl: "/assets/img/og-social-cover.jpg"
 ---
 <h1>writing</h1>
 <section class="posts">
